# bookscrap

./: README.md  pyproject.toml  requirements.txt
src/bookscrap/: __main__.py  cli.py  main.py  protocols.py  runner.py
src/bookscrap/default/: default_callback.py  default_downloader.py  default_provider.py
src/bookscrap/plugins/: manager.py  protocols.py
src/bookscrap/plugins/defaults/: default_callback.py  default_provider.py
